# shuperwhisper

./: .gitignore  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
packaging/: convert_icon.py  create_wizard_images.py  installer.iss
shuper_whisper/: __init__.py  _win32_keys.py  app.py  audio.py  autostart.py  bridge.py  config.py  dictionary.py  formatter.py  hotkey.py  injector.py  overlay.py  settings_ui.py  smart_text.py  theme.py  transcriber.py  tray.py
shuper_whisper/ui/: index.html  package-lock.json  package.json  vite.config.ts
shuper_whisper/ui/src/: App.tsx  index.css
shuper_whisper/ui/src/components/: ActionBar.tsx  DictionaryTab.tsx  FormattingTab.tsx  GeneralTab.tsx  StyledSelect.tsx  TabNav.tsx
shuper_whisper/ui/src/hooks/: useConfig.ts  useTraining.ts
shuper_whisper/ui/src/lib/: bridge.ts  types.ts
tests/: test_audio.py  test_bridge_training.py  test_config.py  test_dictionary.py  test_formatter.py  test_hotkey.py  test_overlay.py  test_smart_text.py
